<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_about"
        android:title="@string/nav_about_title"
        android:icon="@drawable/about_icon"/>

    <item
        android:id="@+id/nav_profile"
        android:title="@string/nav_profile_title"
        android:icon="@drawable/profile_icon"/>

    <item
        android:id="@+id/nav_home"
        android:title="@string/nav_home_title"
        android:icon="@drawable/home_icon"/>

    <item
        android:id="@+id/nav_messages"
        android:title="@string/nav_messages_title"
        android:icon="@drawable/messages_icon"/>

    <item
        android:id="@+id/nav_settings"
        android:title="@string/nav_settings_title"
        android:icon="@drawable/settings_icon"/>

    <item
        android:id="@+id/nav_logout"
        android:title="@string/nav_logout_title"
        android:icon="@drawable/logout_icon"/>

</menu>