<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutActivity">

    <include
        layout="@layout/toolbar_layout"
        android:id="@+id/about_toolbar"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:id="@+id/about_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/about_toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/idea_app_icon"/>

    <TextView
        android:id="@+id/about_mission_statement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/about_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/about_statement_msg"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        android:textSize="15sp"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/about_acronym"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintTop_toBottomOf="@id/about_mission_statement"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/about_acronym_meaning"
        android:text="@string/about_acronym"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        android:textSize="25sp"/>

    <TextView
        android:id="@+id/about_acronym_meaning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/about_acronym"
        app:layout_constraintStart_toEndOf="@id/about_acronym"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/about_acronym_meaning"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        android:textSize="25sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@id/about_acronym_meaning"
        app:layout_constraintStart_toStartOf="parent"
        android:text="more info about idea center..."
        android:textStyle="bold"/>

</android.support.constraint.ConstraintLayout>